--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,6 @@
-<h1>INDEX PAGE</h1>
+<h1>I need tools!</h1>
+
+<%= form_tag 'search' do %>
+  <%= text_field_tag :value %>
+  <%= submit_tag "Search" %>
+<% end %>
