Style index, offer pages and user pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,9 @@
-<h1>I need tools!</h1>
-
-<%= form_tag 'search' do %>
-  <%= text_field_tag :value %>
-  <%= submit_tag "Search" %>
-<% end %>
+<div class="home">
+  <h1>I need tools!</h1>
+  <%= form_tag 'search' do %>
+    <div class="form-inline form-group">
+      <%= text_field_tag :value, "", class:"form-control input-lg" %>
+      <%= submit_tag "Search", class:"btn btn-default btn-lg" %>
+    </div>
+  <% end %>
+</div>
