--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ineedtools</title>
+  <title>I need tools!</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if user_signed_in? %>
-    <%= link_to 'Edit account', edit_user_registration_path %>
-    <%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %>
-  <% else %>
-    <%= link_to 'Sign in', new_user_session_path %>
-    <%= link_to 'Sign up', new_user_registration_path %>
-  <% end %>
-
-<%= yield %>
-
+  <%= render "layouts/navbar" %>
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
