--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -11,31 +11,31 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class:"form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class:"form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :price %><br>
-    <%= f.text_field :price %>
+    <%= f.text_field :price, class:"form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :category_id %><br>
-    <%= f.select(:category_id, @categories.map { |category| [category.name, category.id] }) %>
+    <%= f.select(:category_id, @categories.map { |category| [category.name, category.id] }, {}, class:"form-control") %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :status %><br>
     <%= f.check_box :status %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :pictures %><br>
-    <%= f.file_field :pictures %><br><br>
+    <%= f.file_field :pictures, class:"form-control" %><br><br>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save", class:"btn btn-default" %>
   </div>
 <% end %>
