--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,32 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Offers</h1>
+<h2>Listing Offers</h2>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>User</th>
       <th>Name</th>
       <th>Description</th>
       <th>Price</th>
       <th>Category</th>
       <th>Status</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @offers.each do |offer| %>
       <tr>
-        <td><%= offer.user %></td>
         <td><%= offer.name %></td>
         <td><%= offer.description %></td>
         <td><%= offer.price %></td>
-        <td><%= offer.category %></td>
+        <td><%= offer.category.name %></td>
         <td><%= offer.status %></td>
-        <td><%= link_to 'Show', offer %></td>
-        <td><%= link_to 'Edit', edit_offer_path(offer) %></td>
-        <td><%= link_to 'Destroy', offer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to '[Show]', offer %>
+          <%= link_to '[Edit]', edit_offer_path(offer) %>
+          <%= link_to '[Destroy]', offer, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
