--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,19 @@ h1{
   font-size: 96px;
 }
 
+footer{
+  background-color: #eee;
+  color: #888;
+  padding: 20px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height:100px;
+  background:#ccc;
+}
+
 .home{
 //  background: url('index-tools.jpg') no-repeat fixed center;
   text-align: center;
