--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,12 +15,7 @@ footer{
   color: #888;
   padding: 20px;
   text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height:100px;
-  background:#ccc;
+  margin-top: 20px
 }
 
 .home{
