--- a/app/views/rents/new.html.erb
+++ b/app/views/rents/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Rent</h1>
-
-<%= render 'form' %>
-
+<div class="row">
+  <div class="col-sm-8 col-md-8">
+    <%= render 'offers/offer' %>
+  </div>
+  <div class="col-sm-4 col-md-4">
+    <%= render 'form' %>
+  </div>
+</div>
 <%= link_to 'Back', rents_path %>
