--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,10 @@ footer{
   margin-top: 20px
 }
 
+.panel-heading{
+  text-align: center;
+}
+
 .home{
 //  background: url('index-tools.jpg') no-repeat fixed center;
   text-align: center;
