--- a/app/views/offers/_offer.html.erb
+++ b/app/views/offers/_offer.html.erb
@@ -1,6 +1,19 @@
-
-  <h4><%= @offer.name %></h4>
-  <%= image_tag 'tool.jpg' %></td>
-
-
-  <%= @offer.price %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3><%= @rent.offer.name %></h3>
+  </div>
+  <div class="panel-body">
+    <%= image_tag 'tool.jpg' %></td>
+    <h4>Details</h4>
+    <p>
+      Category: <%= link_to @rent.offer.category.name, category_path(@rent.offer.category.id) %>
+    </p>
+    <h4>Details</h4>
+    <p>
+      Description: <%= @rent.offer.description %>
+    </p>
+    <p>
+      Price: <%= @rent.offer.price %>
+    </p>
+  </div>
+</div>
