--- a/app/views/rents/_form.html.erb
+++ b/app/views/rents/_form.html.erb
@@ -1,26 +1,33 @@
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3>Rent</h3>
+  </div>
+  <div class="panel-body">
+    <%= form_for(@rent) do |f| %>
+      <%= f.hidden_field :offer_id %>
+      <% if @rent.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@rent.errors.count, "error") %> prohibited this rent from being saved:</h2>
 
-<%= form_for(@rent) do |f| %>
-  <% if @rent.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@rent.errors.count, "error") %> prohibited this rent from being saved:</h2>
-
-      <ul>
-      <% @rent.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+          <% @rent.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :initial_date %><br>
-    <%= f.date_select :initial_date %>
+      <div class="form-group">
+        <%= f.label :initial_date %><br>
+        <%= f.date_select :initial_date %>
+      </div>
+      <div class="form-group">
+        <%= f.label :final_date %><br>
+        <%= f.date_select :final_date %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Rent", class:"btn btn-default" %>
+      </div>
+    <% end %>
   </div>
-  <div class="field">
-    <%= f.label :final_date %><br>
-    <%= f.date_select :final_date %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
