--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <%= render "layouts/navbar" %>
-  <div class="container">
+  <div class="main">
     <%= yield %>
   </div>
   <%= render "layouts/footer" %>
