--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,6 @@
-<p>Rent Experience: <%= review.eval %></p>
-  <em> Comment: <%= review.comment %></em>
+<div>
+  <p>Rent Experience: <%= review.eval %></p>
+    <em> Comment: <%= review.comment %></em>
 
-<p>────────────────────────────────────</p>
+  <p>────────────────────────────────────</p>
+</div>
