upload image and create new column imagea and delete column link in picture table

--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -6,8 +6,7 @@
 </p>
 
 <p>
-  <strong>Link:</strong>
-  <%= @picture.link %>
+  <%= image_tag @picture.image_url.to_s %>
 </p>
 
 <%= link_to 'Edit', edit_picture_path(@picture) %> |
