--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :offer_id %>
   </div>
   <div class="field">
-    <%= f.label :link %><br>
-    <%= f.text_field :link %>
+    <%= f.label :image %><br>
+    <%= f.file_field :image %>
   </div>
   <div class="actions">
     <%= f.submit %>
