--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-  <%= image_tag @picture.image_url.to_s %>
+  <%= image_tag @picture.image.url %>
 </p>
 
 <%= link_to 'Edit', edit_picture_path(@picture) %> |
