--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="form-group">
     <%= f.label :category_id %><br>
-    <%= f.select(:category_id, "", @categories.map { |category| [category.name, category.id] }, {}, class:"form-control") %>
+    <%= f.select(:category_id, @categories.map { |category| [category.name, category.id] }, {}, class:"form-control") %>
   </div>
   <div class="form-group">
     <%= f.label :status %><br>
