--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -9,8 +9,8 @@
       <option>5</option>
     </select>
   </div>-->
-
-<div><%= f.text_field :eval, class: "form-control" , placeholder: 'Evaluate the Rental from 1 to 5'%></div>
-  <div><%= f.text_field :comment, class: "form-control", placeholder: 'Comment the Rental, others will love to know your opinion' %> </div>
-  <div><%= f.submit "Save", class: "btn" %></div>
+  <div><%= f.text_field :eval, class: "form-control" , placeholder: 'Evaluate the Rental from 1 to 5'%></div>
+    <div><%= f.text_field :comment, class: "form-control", placeholder: 'Comment the Rental, others will love to know your opinion' %> </div>
+    <div><%= f.submit "Save", class: "btn" %>
+  </div>
 <% end %>
