--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <p>Rent Experience: <%= review.eval %></p>
+  <p>Rent Experience: <span style="font-weight:bold"><%= review.eval %></span></p>
     <em> Comment: <%= review.comment %>
       <em>
       <h6><%= review.updated_at.to_date %></h6>
