--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
         <% if user_signed_in? %>
-          <li><%= link_to 'My Offers', offers_path %></li>
-          <li><%= link_to 'My Rents', rents_path %></li>
+          <li><%= link_to 'Browse tools', search_path %></li>
+          <li><%= link_to 'Post tool', new_offer_path %></li>
         <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to 'Edit account', edit_user_registration_path %></li>
+          <li><%= link_to 'Profile', profile_path %></li>
           <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
         <% else %>
           <li><%= link_to 'Sign in', new_user_session_path %></li>
