--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -27,7 +27,7 @@
         <td><%= offer.category_id %></td>
         <td><%= offer.description  %></td>
         <td><%= offer.status %></td>
-        <td><%= link_to 'Edit', offers_path %>
+        <td><%= link_to 'Edit', offers_path %></td>
     <% end %>
   </tbody>
 </table>
