edit all offers

--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -31,6 +31,7 @@
     <% end %>
   </tbody>
 </table>
+<%= link_to "Edit all", offers_path %>
 <br><br<br>
 <h3>My rentals</h3>
 <table class="table">
