--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -23,8 +23,9 @@
         <% @result.each do |offer| %>
           <div class="col-sm-3 col-md-3">
             <div class="thumbnail">
-              <%= link_to image_tag('tool.jpg'), new_rent_path(offer_id: offer.id) %></td>
+            <td><%= image_tag offer.pictures.first.image.thumbnail.url %></td>
               <h4><%= link_to offer.name, new_rent_path(offer_id: offer.id) %></h4>
+              <%= offer.category.name %>
               <%= "€ #{offer.price}" %>
               </a>
             </div>
