--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -15,7 +15,7 @@
     <% @pictures.each do |picture| %>
       <tr>
         <td><%= picture.offer %></td>
-        <td><%= image_tag picture.image.thumbnail.url %></td>
+        <td><%= image_tag picture.image.thumbnail.url, class: image_tool %></td>
         <td><%= link_to 'Show', picture %></td>
         <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
         <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
