--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
-<footer>
+<div class="navbar-fixed-bottom">
   <p>Developed by
     <%= link_to "Dennis", "https://github.com/dennisdijkstra", target: "_blank" %>,
     <%= link_to "Fabiano", "https://github.com/flgonzales", target: "_blank" %>  and
     <%= link_to "Rosiene", "https://github.com/rosiene", target: "_blank" %>
     </p>
-</footer>
+</div>
